# virtualwatts-formula

./: .flake8  Dockerfile-cpython  Dockerfile-pypy  LICENSE  README.md  SW_output  contributing.md  setup.cfg  setup.py
.github/workflows/: lint_and_test.yml  pylint.yml  release.yml
report/: procsfs_report.py
tests/acceptation/: test_normal_behavior.py
tests/unit/: test_formula.py
virtualwatts/: __init__.py  __main__.py  actor.py  context.py
virtualwatts/report/: __init__.py  procfs_report.py
virtualwatts/test_utils/: reports.py
