[metadata]
name = virtualwatts
version = attr: virtualwatts.__version__
description = VirtualWatts is a formula for a  software-defined power meter based on the PowerAPI framework.
long_description = file: README.md, LICENSE
keywords = energy, powerapi, containers, performance counters, power meter
author = Lauric Desauw
license = MIT
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2
install_requires =
    powerapi [mongodb, influxdb, opentsdb, prometheus] >=1.0.0
tests_require =
    pytest >=3.9.2
    pytest-asyncio >=0.14.0
    pytest-timeout >= 1.4.2
